--- a/src/Shopping-Cart/Main_Page.css
+++ b/src/Shopping-Cart/Main_Page.css
@@ -1,8 +1,14 @@
-.Main_Page .container-fluid {
-  width: 100%;
+.pgset .row .col {
+  position: relative;
+  left: 13%;
 }
 
 /*  */
+
+.paginationSet .container {
+  display: flex;
+  justify-content: center;
+}
 #page-wrap {
   text-align: center;
 
