side bar component updated

--- a/src/Shopping-Cart/Main_Page_Bar/Lower_SelectBarOne.css
+++ b/src/Shopping-Cart/Main_Page_Bar/Lower_SelectBarOne.css
@@ -2,3 +2,18 @@
   margin-top: 15px;
   margin-right: 3.5%;
 }
+
+.lowerbarone .left_nav a {
+  position: relative;
+  color: blue;
+  left: -1310px;
+}
+
+.lowerbarone .left_nav {
+  margin-top: 20px;
+}
+.lowerbarone .left_nav a:hover {
+  cursor: pointer;
+  border-bottom: 1px solid blue;
+  padding: 0;
+}
