--- a/src/Shopping-Cart/Main_Page_Bar/Lower_SelectBarOne.css
+++ b/src/Shopping-Cart/Main_Page_Bar/Lower_SelectBarOne.css
@@ -2,7 +2,7 @@
   margin-top: 15px;
   margin-right: 3.5%;
 }
-
+/*
 .lowerbarone .left_nav a {
   position: relative;
   color: blue;
@@ -16,4 +16,4 @@
   cursor: pointer;
   border-bottom: 1px solid blue;
   padding: 0;
-}
+}*/
