--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -1,10 +1,6 @@
 .productDescription .container {
-  border: 2px solid black;
+  /* border: 2px solid black;*/
   margin-top: 20px;
-}
-
-.productDescription .col-lg-6 {
-  border: 2px solid red;
 }
 
 .productDescription
@@ -22,5 +18,14 @@
 }
 
 .productDescription .carousel .carousel-item {
-  border: 2px solid brown;
+  /*border: 2px solid brown;*/
+  height: auto;
+}
+
+.productDescription .carousel .carousel-item img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 650px;
 }
