--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -29,3 +29,9 @@
   width: 100%;
   height: 650px;
 }
+
+.productDescription footer {
+  height: 50px;
+  background-color: darkgoldenrod;
+  margin-top: 30px;
+}
