--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -35,3 +35,9 @@
   background-color: darkgoldenrod;
   margin-top: 30px;
 }
+
+.productDescription .descriptionNav {
+  position: relative;
+  left: 10px;
+  top: 10px;
+}
