--- a/src/Products/Products_Disp.css
+++ b/src/Products/Products_Disp.css
@@ -29,3 +29,10 @@
   margin-right: auto;
   width: 50%;
 }
+
+/*
+@media (max-width: 560px) {
+  .productDisp .col {
+    border: 1px solid red;
+  }
+}*/
