--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -41,3 +41,9 @@
   left: 10px;
   top: 10px;
 }
+
+@media (max-width: 560px) {
+  .productDescription .carousel .carousel-item img {
+    height: 400px;
+  }
+}
