--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -30,10 +30,13 @@
   height: 650px;
 }
 
-.productDescription footer {
+.productDescription .footer {
   height: 50px;
-  background-color: darkgoldenrod;
-  margin-top: 30px;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
 }
 
 .productDescription .descriptionNav {
