--- a/src/UserCart/User_cart.css
+++ b/src/UserCart/User_cart.css
@@ -2,10 +2,11 @@
   height: 60px;
 }
 
+/*
 .userCart .footer {
-  position: fixed;
-  left: 0px;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
-  height: 50px;
-}
+  height: 60px;
+  line-height: 60px;
+  position: fixed;
+}*/
