--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -36,6 +36,25 @@
   top: 10px;
 }
 
+.productDescription .footer {
+  display: block;
+
+  height: 60px;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.productDescription .empty {
+  background-color: black;
+  border-top: 1px solid #e7e7e7;
+  text-align: center;
+
+  left: 0;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+}
+
 @media (max-width: 560px) {
   .productDescription .carousel .carousel-item img {
     height: 400px;
