--- a/src/Shopping-Cart/ProductDescription/Product_Description.css
+++ b/src/Shopping-Cart/ProductDescription/Product_Description.css
@@ -48,7 +48,7 @@
   background-color: black;
   border-top: 1px solid #e7e7e7;
   text-align: center;
-
+  position: fixed;
   left: 0;
   bottom: 0;
   height: 60px;
